[package]
name = "wdk-mutex"
version = "1.3.1"
edition = "2021"
authors = ["Flux Sec <fluxsec@proton.me>"]
license = "MIT"
repository = "https://github.com/0xflux/wdk_mutex"
documentation = "https://0xflux.github.io/wdk-mutex"
readme = "Readme.md"
keywords = ["windows", "driver", "mutex", "kernel", "wdk"]
description = "An idiomatic Rust mutex type for Windows kernel driver development."

include = [
  "Cargo.toml",
  "LICENCE",
  "Readme.md",
  "src/**",
]

# Important: If you are contributing to this crate you will need to uncomment out the below in order to build
# against the wdk properly. Once it is ready to be merged into the library, please comment out.
# You may need to do a `cargo clean` in between toggles.
# [package.metadata.wdk.driver-model]
# driver-type = "WDM"

[lib]
crate-type = ["lib"]

nightly = ["wdk/nightly", "wdk-sys/nightly"]

[dependencies]
wdk = "0.4"
wdk-sys = "0.5"
wdk-alloc = "0.4"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(driver_model__driver_type, values("WDM","KMDF"))'
] }
